insert id for section rota

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    <div class="content-cabecalho">        
       <a class="logo" href="index.html">Pousada <span>Secreta</span></a>
         <div class="link">
-          <a class="link link1" href="#Sobre">Sobre</a> 
-          <a class="link link2" href="#Rota">Rota</a> 
-          <a class="link link3" href="#Quartos">Quartos</a> 
+          <a class="link link1" href="#sobre">Sobre</a> 
+          <a class="link link2" href="#rota">Rota</a> 
+          <a class="link link3" href="#quartos">Quartos</a> 
         </div>
    </div>
  </div>   
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-  <div class="conteudo">
+  <div class="conteudo" id="quartos">
     <h3>SEJA BEM-VINDO(A)!</h3>
     <p>Relaxe em nossas acomodações e curtao melhor de Angra dos Reis</p>
     <p>Temos quartos para solteiro, casal ou família.</p>
@@ -62,7 +62,7 @@
 
 </div>
 <!-- Sobre a Pousada -->
-<div class="conteudo" id="Rota">
+<div class="conteudo" id="rota">
   <h2>ROTA</h2>
   <p>Veja como chegar até a pousada</p>
 </div>
@@ -72,8 +72,8 @@
     frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
-<div class="conteudo" id="Sobre">
-  <h2>SOBRE A POUSADA!</h2>
+<div class="conteudo" id="sobre">
+  <h2>SOBRE A POUSADA!!</h2>
   <p>Conheça um pouco sobre nossa pousada.</p>
 </div>
 
@@ -140,6 +140,8 @@
       </p>
     </div>
 
+    <img src="Pousada-web/assets/pousada-secreta-final.gif" alt="readme">
+
     <a class="rodape-info rodape-link" target="_blank" href="https://www.booking.com/searchresults.pt-br.html?aid=375635;label=msn-wLZ0m4wRNI00wFHQAaaO3w-79920787059858%3Atikwd-79920803013016%3Aaud-808219487%3Aloc-20%3Aneo%3Amte%3Adec%3Aqsbooking;sid=9ca5cbe6c9db71b34b98c0738ea780f4;dest_id=-666610;dest_type=city&">
       <img class="rodape-icone" src="pousada-web/assets/icones/calendario.png" alt="Ícone calendario" title="Ícone calendario"/>
 
@@ -149,7 +151,7 @@
     </a>
 
     <div class="rodape-copyright">
-      © Copyright - PousadaDev
+      © Copyright - PousadaDev - Feito por Gustavo Carvalho 🧑‍💻.
     </div>
   </div>
 </div>
