--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
   <title>Pousada Secreta</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,10 @@
         <div class="link">
           <a class="link link1" href="#sobre">Sobre</a> 
           <a class="link link2" href="#rota">Rota</a> 
-          <a class="link link3" href="#quartos">Quartos</a> 
+          <a class="link link3" href="#quartos">Quartos</a>
+          
+          <a class="link link4" href="#entrar">Login</a>
+          <a class="link link5" href="#registrar">Registre-se</a>
         </div>
    </div>
  </div>   
@@ -68,8 +71,7 @@
 </div>
 
 <div class="mapa">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1151357567846!2d-43.36501068503287!3d-22.982793284973216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2a689aeccd%3A0xa51f3be0d88fc0f!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-003!5e0!3m2!1spt-BR!2sbr!4v1628029130740!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" 
-    frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1151357567846!2d-43.36501068503287!3d-22.982793284973216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2a689aeccd%3A0xa51f3be0d88fc0f!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-003!5e0!3m2!1spt-BR!2sbr!4v1628029130740!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" style="border:0" allowfullscreen title="iframe-map"></iframe>
 </div>
 
 <div class="conteudo" id="sobre">
